--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -322,5 +322,6 @@
                 <div class="dot four"></div>
             </div>
         </div>
+        <h4> Ver 1.0.2 </h4>
     </section>
 </ion-content>
