--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -52,6 +52,10 @@
     <param name="android-package" value="org.apache.cordova.device.Device"/>
   </feature>
 
+  <feature name="Idfa">
+    <param name="android-package" value="by.chemerisuk.cordova.advertising.IdfaPlugin"/>
+  </feature>
+
   <feature name="StatusBar">
     <param name="android-package" value="org.apache.cordova.statusbar.StatusBar"/>
     <param name="onload" value="true"/>
