--- a/src/app/shared/drill/drill.component.scss
+++ b/src/app/shared/drill/drill.component.scss
@@ -213,7 +213,7 @@ section.drill-results {
 
       table {
         display: block;
-
+color:white;
         height: 200px;
         width: 100%;
         border-radius: 5px;
@@ -293,7 +293,7 @@ section.drill-results {
               font-size: 12px;
               line-height: 14px;
               letter-spacing: 0.12px;
-              text-align: left;
+              text-align: center;
               box-sizing: border-box;
               padding: 0 0.5em;
 
@@ -380,7 +380,7 @@ section.drill-results {
 }
 
 td {
-  text-align: left;
+  text-align:  center;
 }
 
 div.targetHoly {
@@ -1024,6 +1024,7 @@ div.welcome-message {
 .bg-pic {
   position: absolute;
   z-index: -1;
+  height: 100%;
 }
 
 .challenge-promo {
@@ -1052,3 +1053,6 @@ div.welcome-message {
 
 
 
+table {
+  color:white;
+}
